# HotConsts

./: .gitignore  CMakeLists.txt  README.md  pm_library.lua  premake5.lua
include/HotConsts/: HC_ArithmeticEval.h  HC_Atomic.h  HC_Enums.h  HC_FileWatch.h  HC_LiteralConversions.h  HC_PCH.h  HC_StringEval.h  HotConsts.h
scripts/: buildlib_mac.command  buildlib_win.bat
src/: HC_ArithmeticEval.cpp  HC_Enums.cpp  HC_FileWatch_Win32.cpp  HC_FileWatch_macOS.cpp  HC_LiteralConversions.cpp  HC_PCH.cpp  HotConsts.cpp
tests/: CMakeLists.txt  ConversionTests.cpp  ExpressionTests.cpp  IdentificationTests.cpp  LiteralSamples.cpp  LiteralSamples.h  OperatorTests.cpp  ReloadTests.cpp  TokenizationTests.cpp  _main.cpp  _tests.h  premake5.lua
tests/ReloadTests/: fileChangeTriggersReload.txt  handleMultiLineCommentsInStrings.txt  handleMultiLineComments_after.txt  handleMultiLineComments_before.txt  handleSingleLineCommentsInStrings.txt  handleSingleLineComments_after.txt  handleSingleLineComments_before.txt  reloadHandlesBadAssignment.txt  reloadHandlesBadParams.txt  reloadHandlesEOF_awaitingAssignmentOperator.txt  reloadHandlesEOF_awaitingComma.txt  reloadHandlesEOF_awaitingLParentheses.txt  reloadHandlesEOF_awaitingParam1.txt  reloadHandlesEOF_awaitingParam2.txt  reloadHandlesEOF_awaitingRParentheses.txt  reloadHandlesEOF_awaitingSemicolon.txt  reloadHandlesNewParams.txt  reloadHandlesRedefinitions.txt  reloadIgnoresMacroInStrings.txt  reloadMultipleHCs.txt  reloadMutipleHCsSingleLine.txt  reloadSimpleHC.txt  reloadSingleHCWithLineBreaks.txt  reloadSingleHCWithTypeModifier.txt  reloadSingleHCWithTypeModifierAndLineBreaks.txt  reloadSkipsSymbolsContainingHC.txt
